k8s_backup/app-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: go-web-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-api
  template:
    metadata:
      labels:
        app: go-web-api
    spec:
      containers:
        - name: go-web-api
          image: mandacosta/golunch_api
          resources:
            requests:
              cpu: "100" # use 100m for normal usecases
              memory: 128Mi # use 128Mi for normal usecases
            limits:
              cpu: "500" # use 500m for normal usecases
              memory: 256Mi # use 256Mi for normal usecases
          volumeMounts: 
            - name: uploads
              mountPath: /app/uploads

          startupProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 3
            failureThreshold: 3
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            periodSeconds: 5
            failureThreshold: 1
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc
