k8s_backup/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-api-service
spec:
  type: NodePort
  selector:
    app: go-web-api
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30080
