k8s_backup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: golunch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-api-service
                port:
                  number: 8080
